--- a/signup.html
+++ b/signup.html
@@ -99,7 +99,7 @@
             </form>
         </div>
         <div class="signin-link">
-            <p>Already have an account? <a href="signin.html">Sign in</a></p>
+            <p>Already have an account? <a href="login.html">Sign in</a></p>
         </div>
     </div>
 </body>
