--- a/landing.html
+++ b/landing.html
@@ -18,15 +18,16 @@
                 <button>🔍</button>
             </div>
             <div class="user-actions">
-                <a href="#">Hello, sign in</a>
-                <a href="#">Returns & Orders</a>
+                <a href="login.html">sign in</a>
+                <a href="signup.html">sign up</a>
                 <a href="#">Cart</a>
             </div>
+
         </div>
     </header>
     <nav>
         <ul>
-            <li><a href="#">All</a></li>
+            <li><a href="index.html">All</a></li>
             <li><a href="#">Today's Deals</a></li>
             <li><a href="#">Customer Service</a></li>
             <li><a href="#">Registry</a></li>
