modified:   electronics.html 	modified:   login.html 	modified:   toys.html

--- a/electronics.html
+++ b/electronics.html
@@ -41,15 +41,72 @@
         </main>
     </div>
     <div id="notification"></div>
+    <div id="notification"></div>
+    <a href="#top" class="back-to-top">Back to top</a>
     <footer>
-        <p>&copy; 2024 AmazonLike. All rights reserved.</p>
-        <p>
-            <a href="#">About Us</a> | 
-            <a href="#">Contact</a> | 
-            <a href="#">Privacy Policy</a> | 
-            <a href="#">Terms of Service</a>
-        </p>
+        <div class="footer-content">
+            <div class="footer-column">
+                <h3>Get to Know Us</h3>
+                <ul>
+                    <li><a href="#">Careers</a></li>
+                    <li><a href="#">Blog</a></li>
+                    <li><a href="#">About AmazonLike</a></li>
+                    <li><a href="#">Investor Relations</a></li>
+                    <li><a href="#">AmazonLike Devices</a></li>
+                    <li><a href="#">AmazonLike Science</a></li>
+                </ul>
+            </div>
+            <div class="footer-column">
+                <h3>Make Money with Us</h3>
+                <ul>
+                    <li><a href="#">Sell products on AmazonLike</a></li>
+                    <li><a href="#">Sell on AmazonLike Business</a></li>
+                    <li><a href="#">Sell apps on AmazonLike</a></li>
+                    <li><a href="#">Become an Affiliate</a></li>
+                    <li><a href="#">Advertise Your Products</a></li>
+                    <li><a href="#">Self-Publish with Us</a></li>
+                    <li><a href="#">Host an AmazonLike Hub</a></li>
+                    <li><a href="#">› See More Make Money with Us</a></li>
+                </ul>
+            </div>
+            <div class="footer-column">
+                <h3>AmazonLike Payment Products</h3>
+                <ul>
+                    <li><a href="#">AmazonLike Business Card</a></li>
+                    <li><a href="#">Shop with Points</a></li>
+                    <li><a href="#">Reload Your Balance</a></li>
+                    <li><a href="#">AmazonLike Currency Converter</a></li>
+                </ul>
+            </div>
+            <div class="footer-column">
+                <h3>Let Us Help You</h3>
+                <ul>
+                    <li><a href="#">AmazonLike and COVID-19</a></li>
+                    <li><a href="#">Your Account</a></li>
+                    <li><a href="#">Your Orders</a></li>
+                    <li><a href="#">Shipping Rates & Policies</a></li>
+                    <li><a href="#">Returns & Replacements</a></li>
+                    <li><a href="#">Manage Your Content and Devices</a></li>
+                    <li><a href="#">Help</a></li>
+                </ul>
+            </div>
+        </div>
     </footer>
+    <div class="footer-bottom">
+        <div class="logo">AmazonLike</div>
+        <div class="settings">
+            <select>
+                <option>English</option>
+            </select>
+            <select>
+                <option>USD - U.S. Dollar</option>
+            </select>
+            <select>
+                <option>United States</option>
+            </select>
+        </div>
+    </div>
+</div>
     <script>
         const products = [
             { id: 1, name: 'Wireless Earbuds', price: 79.99, image: '/api/placeholder/150/150', rating: 4.5, category: 'electronics' },
