--- a/login.html
+++ b/login.html
@@ -105,7 +105,7 @@
                 <label for="password">Password</label>
                 <input type="password" id="password" name="password" required>
                 
-                <button type="submit" class="signin-button">Sign in</button>
+                <button a href="index.html" type="submit" class="signin-button">Sign in</button>
             </form>
         </div>
         <div class="signup-link">
